# PAT

./: .gitignore  README.md
1002_/: CMakeLists.txt  main.cpp
1003/: CMakeLists.txt  main.cpp
1004/: CMakeLists.txt  main.cpp
1005/: main.cpp
1006/: main.cpp
1007/: main.cpp
1008/: main.cpp  state.zhou
1009/: main.cpp
1010/: main.cpp
1016/: CMakeLists.txt  main.cpp
1017/: CMakeLists.txt  main.cpp
1018/: CMakeLists.txt  main.cpp
1019/: CMakeLists.txt  main.cpp
3n+1/: main.cpp
sort_D/: CMakeLists.txt  main.cpp
test0/: CMakeLists.txt
test1/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp
